syntax = "proto3";

package kv;

service KVStore {
    rpc Publish (PublishRequest) returns (Empty);
    rpc Fetch (FetchRequest) returns (FetchResponse);
    rpc Delete (DeleteRequest) returns (Empty);
    rpc Subscribe (FetchRequest) returns (stream FetchResponse);
}

message Empty {}

// Publish
message PublishRequest {
    string key = 1;
    bytes value = 2;
}

// Fetch
message FetchRequest {
    string key = 1;
}

message FetchResponse {
    bytes value = 1;
    int64 timestamp = 2;
}

// Delete
message DeleteRequest {
    string key = 1;
}
